--- a/app/src/main/res/layout/draw_main.xml
+++ b/app/src/main/res/layout/draw_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".DrawActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,4 +54,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"></LinearLayout>
+
 </LinearLayout>
