--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -29,15 +29,16 @@
                 android:text="채팅방 입장 또는 새로 만들기"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"/>
+
             <EditText
                 android:id="@+id/user_chat"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="CHAT NAME"
-                android:layout_gravity="left"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
                 android:gravity="center"
-                android:layout_marginBottom="20dp"/>
+                android:hint="CHAT NAME"
+                android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/user_edit"
@@ -45,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:hint="USER NAME"
-                android:layout_gravity="right"
+                android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_marginBottom="20dp"/>
 
