--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -9,11 +9,13 @@
     tools:context=".Test">
 
     <TextView
-        android:layout_width="91dp"
-        android:layout_height="41dp"
-        android:text="게시판"
+        android:layout_width="403dp"
+        android:layout_height="46dp"
+        android:gravity="center"
+        android:text="홍보글 작성하기"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.093"
@@ -22,62 +24,11 @@
         app:layout_constraintVertical_bias="0.036" />
 
     <TextView
-        android:layout_width="91dp"
-        android:layout_height="41dp"
-        android:text="제목"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.134"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.186" />
-
-    <TextView
-        android:layout_width="91dp"
-        android:layout_height="41dp"
-        android:text="내용"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.134"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.271" />
-
-    <EditText
-        android:id="@+id/name_edit"
-        android:layout_width="273dp"
-        android:layout_height="44dp"
-        android:hint="ex)기숙사 룸메이트 구해요"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.971"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.186" />
-
-    <EditText
-        android:id="@+id/content_edit"
-        android:layout_width="331dp"
-        android:layout_height="77dp"
-        android:hint="ex)노악관 23학번입니다. 구체적인건 쪽지로 이야기 나눠요!"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.573"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.362" />
-
-    <!--
-    <TextView
-        android:layout_width="122dp"
-        android:layout_height="35dp"
-        android:text="비밀번호 입력"
+        android:layout_width="404dp"
+        android:layout_height="43dp"
+        android:gravity="center"
+        android:text="같이 하고 싶은 내용을 홍보해 주세요"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,21 +36,21 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.793" />
+        app:layout_constraintVertical_bias="0.103" />
 
     <EditText
-        android:id="@+id/password_edit"
-        android:layout_width="299dp"
-        android:layout_height="55dp"
-        android:hint="게시판 수정 시 필요한 비밀번호 입니다."
-        android:inputType="number"
+        android:id="@+id/name_edit"
+        android:layout_width="384dp"
+        android:layout_height="96dp"
+        android:hint="ex)토익 기초 스터디 모집중!!_토익스터디 채팅방을 검색해주세요!"
+        android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.311"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.797" />
--->
+        app:layout_constraintVertical_bias="0.312" />
+
     <Button
         android:id="@+id/add_btn"
         android:layout_width="151dp"
@@ -107,22 +58,22 @@
         android:text="등록"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.928" />
+        app:layout_constraintVertical_bias="0.479" />
 
     <Button
         android:id="@+id/list_btn"
         android:layout_width="149dp"
         android:layout_height="53dp"
         android:layout_margin="20dp"
-        android:text="리스트"
+        android:text="홍보글 보러가기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.958" />
+        app:layout_constraintVertical_bias="0.6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
