--- a/app/src/main/res/layout/map_main.xml
+++ b/app/src/main/res/layout/map_main.xml
@@ -2,16 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapActivity">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <fragment
+
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/map_main" />
+        tools:context=".MapsActivity"
+        tools:layout="@layout/activity_main" />
 
 
 </LinearLayout>
